assets/scss/base/_errors.scss
/**
* @desc         Contains rules for errors
* @name         errors
* @author       Richard Vinall
* @requires     [ colours.scss ]
*/

@mixin error-box( $border-width: 3px ) {
    background-color: $error-bg-color;
    border-left: $border-width solid $error-border-color;
    padding: 0.75em 1em;   
}

.error-overview {
    @include error-box;
    margin-bottom: 20px;
}

.error-overview__heading {
    font-size: 22px;
    margin: 0;
}

.error-overview__list-item {
    color: $error-color;
    font-size: 15px;
    margin-left: 20px;

    a {
        color: inherit;
    }

}

.form-field--error {
  @include error-box(3px);
  @include box-sizing(border-box);
  padding: 0.75em 1em 0.75em 1em;

  &.numbered {
    margin-left: 22px!important;
    width: 90%;
  }

  .error-notification {
    display: block;
    @include core-16;
  }

  .error-field {
    border: 3px solid $error-border-color;
  }
  
}

